style.css
@import url('https://fonts.googleapis.com/css?family=Lato|Montserrat|Muli|Open+Sans|Oswald|Questrial|Roboto&display=swap');
 /* 
    font-family: 'Lato', sans-serif;

    font-family: 'Montserrat', sans-serif;

    font-family: 'Oswald', sans-serif;

    font-family: 'Questrial', sans-serif;

    font-family: 'Muli', sans-serif;

    font-family: 'Roboto', sans-serif;

    font-family: 'Open Sans', sans-serif;
 */
/* colors */

:root{
  --black:#444655;
  --blue:#007bff;
  --aqua-marine:#e9efff;
  --glitter:#e6f4f1;
  --azureish-white:#cee8e6;
  --aqua-marine:#6efacc;
  --ghost-white:#f8f9ff;
  --medium-gray:#a8aabc;
  --sky-blue:#00dbf1;
  --orange-red:#ea4300;
  --green:#009d58;
  --fresh-air:#aaddff;
  --blue-shade:#0044bc;

}
/*Global styles*/
/* Links */
a,
a:focus,
a:hover {
  color: #161c2d;
  font-family: 'Montserrat', sans-serif;
}

h1,h2,h3,h4,h5,h6,.title-caption{
  font-family: 'Montserrat', sans-serif;
}

p{
  font-family: 'Open Sans', sans-serif; 
}

.text-1,.text-2,.text-3{
  color:#444655;
}
.text-1{
  font-size: 18px !important;
}
.text-2{
  font-size: 16px !important;
}
.title-caption{
  font-size: 15px;
  font-style: italic;
}
.title-1{
  font-size: 32px !important;
  color:#161c2d; 
  font-weight: 800; 
  position: relative;
  padding-bottom: 20px;  
}
.title-2{
  font-size: 20px !important;
  color:#2C2C2C;
  font-weight: 700;
  margin-top: 5px;
}
.title-highlight{
  font-weight: 800;   
  color: #ff4500;
}

.title-1::before{
position: absolute;
content: '';
bottom: 0px;
left: 50%;
width: 70px;
height: 2px;
background: #ff4500;
margin-left: -35px;
}
/* Custom default button */
.btn-secondary{
  color: #fff;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color:#007bff;
  border: .05rem solid #fff;
}

.btn-secondary:hover,
.btn-secondary:focus {
  background-color:#0044bc;
}

/* Base structure*/
html,
body {
  height: 100%;
  background-color: #ffffff;
  font-family: 'Roboto', sans-serif;
}

body {   
  color: #161c2d;
  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
  /* box-shadow: inset 0 0 5rem rgb(249, 251, 253); */
}

/* horizontal line divider */
.hr-divider{
  margin-top:5px;
  margin-bottom:5px;
  height:1px;
  width:80%;
  margin: 0 auto;
  border-top:1px solid rgba(0, 123, 255,0.2);
 }

 /* overlay  */
 .overlay{
  position: relative;
}
.overlay::before{
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  background: rgba(0, 0, 0,0.6);
}
.overlay h1, .overlay h2{
  position: relative;
  z-index: 99;
}
/* end overlay */

/*
----------------- 
 Home Page
-----------------
*/

.home{
  height: 90vh;
  /* max-width: 95%; */
}
/* .v-header{
  display:flex;
  align-items:center;
  color:#fff;
  border: 2px solid red;
} */


.fullscreen-video-wrap{
  position:absolute;
  top:0;
  left:0;
  bottom: 0;
  width:100%;
  height:100vh;
  overflow:hidden;
}

.fullscreen-video-wrap video{
  min-height:100%;
  min-width:100%;
  /* Make video to at least 100% wide and tall */; 

  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
  width: auto;
  height: auto;

  /* Center the video */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}
/* 
==== END - HOME VIDEO ====
/* 

/*
 ==== Welcome ====
*/
.welcome{   
padding:4rem 0!important;     
background-color: #ffffff;
}
.welcome-card img{
   max-width: 36px;
 }
/* 
==== END - WELCOME ====
*/


/* 
==== CORE VALUES ====
*/
.core-values{
  padding:4rem 0!important;
  background-color: #f5f8fd;
}
.core-val-caption {
  background-image: url("./images/background/bg_shape.svg");
  background-repeat: no-repeat;
  background-size:350px 350px;
  background-position: center;
} 

.core-values-items img{
  width: 40px;
  height: auto;   
}
/* 
==== END - CORE VALUES ====
*/


/*
==== SERVICES ====
*/
.services{
  padding: 4rem 0 !important;
}
.main-service { 
  padding: 20px;
  margin: 10px 10px;   
  margin-bottom: 15px;
  background-color: #fff;      
  position: relative;   
  border-radius: 5px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.03);
  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
  transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
 
}
/* .main-service:hover{        
  transition: all .2s ease-in-out; 
  transform: translateY(-3px);
  box-shadow: 0 0 35px rgba(140, 152, 164, 0.25),-10px 0 15px rgba(140, 152, 164, 0.25) !important;
} */
 
.service-row{
  margin-top: 55px;
  display: flex;
  justify-content: center; 
}
.service-icon {      
  /* padding: 0.4rem; */
  margin-bottom: 0;
  padding:10px;
  background-color:#ffffff;
  position: absolute;
  left: 37%;
  top: -40px;
  text-align: center;
  border-radius:50px;
}
.serv-text{
  min-height: 120px;
  margin-bottom:0 ;
}
.service-link a{
  font-weight: 700;  
  text-decoration: none !important;
  position: relative;
}

.service-link{
  visibility: hidden;
}

.main-service:hover .service-link{
  visibility: visible;
}

.service-link a:before {
  content: "";
  position: absolute;
  width: 80%;
  height: 2px;
  bottom: 0;
  left: 10px;
  margin: 0 auto;
  background-color: #007bff;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.main-service:hover .service-link a:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}


 
.serv-1{
border: 1px solid rgba(0, 157, 88,0.7);
/* background-color: #deffe5; */
}
 
.serv-2{
border: 1px solid rgba(255, 69, 0,0.7);
/* background-color: antiquewhite; */
}
.serv-3{
border: 1px solid #95aeff;
/* background-color: #95aeff4d; */
}
.serv-4{
  border:1px solid #95aeff;
  /* background-color: #95aeff4d; */
}
.serv-5{
border: 1px solid rgba(0, 157, 88,0.7);
/* background-color: #deffe5; */
}
.serv-6{
  border: 1px solid rgba(255, 69, 0,0.7);
/* background-color: antiquewhite; */
}
/* ... */

